--- a/phpgwapi/templates/bookingfrontend_2/styleguide/button/button.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/button/button.scss
@@ -48,7 +48,7 @@ a.pe-btn {
   }
 
   &--transparent {
-    --pe-btn-text-color: #{black};
+    --pe-btn-text-color: #{$black};
     --pe-btn-hover-text-color: #{$purple};
     --pe-btn-background-color: #{transparent};
     --pe-btn-border-color: #{transparent};
