styling and move some client sided logic server side

--- a/phpgwapi/templates/bookingfrontend_2/styleguide/button/button.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/button/button.scss
@@ -229,6 +229,9 @@ a.pe-btn {
     //  background-color: $color-y; /* Color Y on hover */
     //}
   }
+  &-text {
+    @include text-styles;
+  }
 
 }
 
