--- a/phpgwapi/templates/bookingfrontend_2/styleguide/main.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/main.scss
@@ -23,3 +23,4 @@
 @import 'collapsable-text/collapsable-text.scss';
 @import 'shopping-cart/shopping-cart.scss';
 @import 'dialogs/dialog.scss';
+@import 'accordion/accordion.scss';
