--- a/phpgwapi/templates/bookingfrontend_2/styleguide/typography/typography.scss
+++ b/phpgwapi/templates/bookingfrontend_2/styleguide/typography/typography.scss
@@ -144,8 +144,7 @@ h4, .h4 {
   }
 }
 
-
-.text {
+@mixin text-styles {
   &-small {
     @include applyFontProperties('caption');
   }
@@ -188,6 +187,10 @@ h4, .h4 {
   &-bolder {
     font-weight: $text-bolder;
   }
+}
+
+.text {
+  @include text-styles;
 }
 
 .line-height {
