add handle to visualize resize

--- a/phpgwapi/js/pecalendar/pecalendar.css
+++ b/phpgwapi/js/pecalendar/pecalendar.css
@@ -1437,6 +1437,9 @@ h4, .h4 {
 .calendar .calendar-body .event-temporary.current-temp {
   z-index: auto;
 }
+.calendar .calendar-body .event-temporary .event-title {
+  flex-grow: 1;
+}
 .calendar .calendar-body .event-temporary::before, .calendar .calendar-body .event-temporary::after {
   content: "";
   display: block;
@@ -1452,6 +1455,23 @@ h4, .h4 {
 }
 .calendar .calendar-body .event-temporary::after {
   bottom: 0; /* Position the ::after element at the bottom */
+}
+.calendar .calendar-body .event-temporary .drag-handle {
+  bottom: 0;
+  display: flex;
+  cursor: ns-resize;
+  align-items: flex-end;
+  justify-content: center;
+  grid-column: span 2;
+  max-height: 10px;
+  align-self: flex-end;
+}
+.calendar .calendar-body .event-temporary .drag-handle .drag-handle-inner {
+  border-radius: 8px;
+  min-width: 50%;
+  min-height: 3px;
+  max-height: 3px;
+  background-color: #999999;
 }
 .calendar .calendar-body .available-slot {
   border-color: #FFF;
