--- a/phpgwapi/js/pecalendar/pecalendar.scss
+++ b/phpgwapi/js/pecalendar/pecalendar.scss
@@ -71,13 +71,13 @@ $column-width: 12; // how many columns in a given timeslot
   display: flex;
   flex-direction: column;
   flex: 1;
-  gap: 8px;
+  gap: 24px;
 
   .header {
     display: flex;
     flex-direction: column;
     margin-top: 10px;
-    gap: 8px;
+    gap: 24px;
     //display: grid;
     //grid-template-columns: var(--time-width) repeat(7, 1fr);
     //background: #F5F5F5;
@@ -93,7 +93,8 @@ $column-width: 12; // how many columns in a given timeslot
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      gap: 8px;
+      gap: 24px;
+      flex-grow: 1;
 
       fieldset {
         justify-content: center;
@@ -144,13 +145,13 @@ $column-width: 12; // how many columns in a given timeslot
       justify-content: space-between;
       align-items: center;
       flex-wrap: wrap;
-      gap: 8px;
+      gap: 24px;
     }
 
     .temp-event-pills {
       display: flex;
       flex-wrap: wrap;
-      gap: 10px; /* space between pills */
+      gap: 24px; /* space between pills */
       .temp-event-pill {
         padding: 0px 10px;
         border-radius: 15px;
@@ -189,7 +190,7 @@ $column-width: 12; // how many columns in a given timeslot
           //border-bottom-right-radius: 50px;
           display: flex;
           flex-direction: row;
-          gap: 0.275rem;
+          gap: 0.5rem;
         }
       }
 
